[gd_scene load_steps=21 format=3 uid="uid://lsni7bco1t7t"]

[ext_resource type="Script" path="res://entities/player/player.gd" id="1_g1pj2"]
[ext_resource type="SpriteFrames" uid="uid://dmxhvlqnqi4em" path="res://entities/player/playerAnim.tres" id="2_ib2wq"]
[ext_resource type="Shader" path="res://entities/player/player.gdshader" id="2_xfmht"]
[ext_resource type="Script" path="res://entities/player/Camera2D.gd" id="4_kr2yj"]
[ext_resource type="Script" path="res://entities/player/vaccuum.gd" id="5_bfok5"]
[ext_resource type="Shader" path="res://World/background.gdshader" id="5_m0qxn"]
[ext_resource type="Texture2D" uid="uid://igajlkjrdxur" path="res://entities/player/dust.png" id="6_pggit"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yocgs"]
size = Vector2(7.475, 5)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_oy8eb"]
shader = ExtResource("2_xfmht")
shader_parameter/line_scale = 0.875

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s2ue7"]
size = Vector2(7, 8)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ld5a2"]
shader = ExtResource("5_m0qxn")
shader_parameter/aspect = 8.0
shader_parameter/basePulse = 1.0
shader_parameter/color1 = Quaternion(0, 0.3, 0.6, 1)
shader_parameter/color2 = null
shader_parameter/dataspeed = 0.375
shader_parameter/doInput = false
shader_parameter/height = 0.5
shader_parameter/line_freq = 3.0
shader_parameter/numBlocks = 32
shader_parameter/scale = Vector2(0.05, 0.1)
shader_parameter/size = Vector2(0.3, 0.3)
shader_parameter/speed = 0.375
shader_parameter/ySpread = null

[sub_resource type="CircleShape2D" id="CircleShape2D_ih6p0"]
radius = 2.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iwjad"]
size = Vector2(12, 8)

[sub_resource type="Gradient" id="Gradient_w202f"]
offsets = PackedFloat32Array(0.120567, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_8xhci"]
gradient = SubResource("Gradient_w202f")
width = 64

[sub_resource type="Curve" id="Curve_3rovo"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.77193, 0.309091), -2.64848, -0.495652, 0, 0, Vector2(1, 0.209091), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_fiv5q"]
width = 64
curve = SubResource("Curve_3rovo")

[sub_resource type="ParticleProcessMaterial" id="ParticlesMaterial_3rgib"]
emission_shape = 3
emission_box_extents = Vector3(1, 5, 1)
particle_flag_disable_z = true
spread = 0.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = -30.0
initial_velocity_max = -30.0
orbit_velocity_min = -0.03
orbit_velocity_max = -0.03
radial_accel_min = -20.0
radial_accel_max = -20.0
angle_min = -180.0
angle_max = 180.0
scale_min = 0.5
scale_max = 0.5
scale_curve = SubResource("CurveTexture_fiv5q")
color_ramp = SubResource("GradientTexture1D_8xhci")

[sub_resource type="Animation" id="Animation_yfk6d"]
resource_name = "startVacuum"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("vaccuum/CollisionShape2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("vaccuum/CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(16, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nkrkp"]
_data = {
"startVacuum": SubResource("Animation_yfk6d")
}

[node name="Player" type="CharacterBody2D"]
z_index = 3
collision_layer = 9
collision_mask = 33
motion_mode = 1
wall_min_slide_angle = 3.14159
script = ExtResource("1_g1pj2")

[node name="boxbody" type="CollisionShape2D" parent="."]
position = Vector2(0, 2.5)
shape = SubResource("RectangleShape2D_yocgs")

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
texture_repeat = 1
material = SubResource("ShaderMaterial_oy8eb")
frames = ExtResource("2_ib2wq")
animation = &"idle"
playing = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 2)
rotation = 1.5708
shape = SubResource("RectangleShape2D_s2ue7")

[node name="Camera2D" type="Camera2D" parent="."]
z_index = -50
position = Vector2(0, 0.034)
current = true
zoom = Vector2(4, 4)
script = ExtResource("4_kr2yj")

[node name="background" type="ColorRect" parent="Camera2D"]
show_behind_parent = true
material = SubResource("ShaderMaterial_ld5a2")
offset_left = -140.0
offset_top = -87.0
offset_right = 140.0
offset_bottom = 87.0

[node name="playerchest" type="Area2D" parent="."]
collision_mask = 0

[node name="collision" type="CollisionShape2D" parent="playerchest"]
shape = SubResource("CircleShape2D_ih6p0")

[node name="holdingItem" type="Marker2D" parent="."]

[node name="vaccuum" type="Area2D" parent="holdingItem"]
z_index = 3
position = Vector2(14, 0)
gravity = 1024.0
linear_damp_space_override = 3
linear_damp = 0.0
script = ExtResource("5_bfok5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="holdingItem/vaccuum"]
position = Vector2(4, 0)
shape = SubResource("RectangleShape2D_iwjad")

[node name="GPUParticles2D" type="GPUParticles2D" parent="holdingItem/vaccuum"]
position = Vector2(10, 0)
scale = Vector2(0.997834, 1)
emitting = false
amount = 32
speed_scale = 3.0
process_material = SubResource("ParticlesMaterial_3rgib")
texture = ExtResource("6_pggit")

[node name="AnimationPlayer" type="AnimationPlayer" parent="holdingItem"]
libraries = {
"": SubResource("AnimationLibrary_nkrkp")
}

[connection signal="body_entered" from="Area2D" to="." method="_intersect_object"]
[connection signal="body_exited" from="Area2D" to="." method="_left_object"]
